类和对象跟踪